Set gap in time display, fix alignment method
The time and meridiem (am/pm) have been given a set amount of gap. Also,
we have changed the alignment method in time display of hourly forecast
to CSS Grid from Flexbox since it has been used throughout the code in
other areas.

--- a/src/style.css
+++ b/src/style.css
@@ -188,8 +188,11 @@ input[type="radio"]:checked {
 }
 
 .hour-time {
-    display: flex;
-    align-items: flex-end;
+    display: grid;
+    grid-auto-flow: column;
+    align-items: baseline;
+    line-height: normal;
+    gap: 2px;
 }
 
 .hour-time > div:first-child {
@@ -448,6 +451,7 @@ input[type="radio"]:checked {
     align-items: baseline;
     line-height: normal;
     font-size: 2rem;
+    gap: 2px;
 }
 
 .sunrise .data-heading + div > div:last-child,
